# pypassgen

./: README.md  config.json  pyproject.toml
.github/workflows/: main.yml
pypassgen/: __main__.py
tests/: conftest.py
